# rust-url-shortener

./: Cargo.toml
src/: configs.rs  handlers.rs  main.rs  repositories.rs  services.rs
static/: index.html  scripts.js  styles.css
