[package]
name = "url-shortener"
version = "0.1.0"
authors = ["João Alonso <joao.alonso@b2wdigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
nanoid = "0.4.0"